@@ -9,9 +9,9 @@
 #define _JOE_UNDO_H 1
 
 struct undorec {
-	LINK(UNDOREC)	link;
-	UNDOREC	*unit;
-	int	min;
+	LINK(UNDOREC)	link;	/* Doubly-linked list of undo records */
+	UNDOREC	*unit;		/* If this is first record of a unit: points to last.  If this is last record of a unit: points to first. */
+	int	min;		/* Set to allow merging of undo information with this record (like to small inserts) */
 	int	changed;	/* Status of modified flag before this record */
 	long	where;		/* Buffer address of this record */
 	long	len;		/* Length of insert or delete */
@@ -24,10 +24,10 @@ struct undo {
 	LINK(UNDO)	link;
 	B	*b;
 	int	nrecs;
-	UNDOREC	recs;
-	UNDOREC	*ptr;
-	UNDOREC	*first;
-	UNDOREC	*last;
+	UNDOREC	recs;		/* The undo records: recs.link.prev is latest */
+	UNDOREC	*ptr;		/* Pointer to latest "undone" record. */
+	UNDOREC	*first;		/* Pointers to first and last records of a group.  The group is */
+	UNDOREC	*last;		/* treated as a single undo record. */
 };
 
 extern int inundo; /* Set if inserts/deletes are part of an undo operation */
@@ -37,7 +37,7 @@ UNDO *undomk PARAMS((B *b));
 void undorm PARAMS((UNDO *undo));
 int uundo PARAMS((BW *bw));
 int uredo PARAMS((BW *bw));
-void umclear PARAMS((void));
+void umclear PARAMS((void)); /* Call this to finalize current undo records.  New changes will create new records. */
 void undomark PARAMS((void));
 void undoins PARAMS((UNDO *undo, P *p, long int size));
 void undodel PARAMS((UNDO *undo, long int where, B *b));
